# musclemaster

./: .gitignore  CMakeLists.txt  Jenkinsfile
JSONs/: fiveToOne_streched.json  test.json  test2.json  thicc.json
Schriftteil/: BA.aux  BA.bib  BA.dvi  BA.out  BA.tex  BA.toc
Schriftteil/Graphics/: Actin2zu1Abstaende.pptx  Actin2zu1Gitter.pptx  Actin3zu1Abstaende.pptx  Actin3zu1Gitter.pptx  Actin5zu1Abstaende.pptx  Actin5zu1Abstände.pptx  Actin5zu1Gitter.pptx  Actin6zu1Abstaende.pptx  Actin6zu1Gitter.pptx  ActinZuMyosinSkizze.pptx  BareZone.pptx  Meromyosin.pptx  MeromyosinTriplets.pptx  MyosinAufteilung.pptx  MyosinGitter.pptx  Sarkomer.pptx  TropomyosinTroponin.pptx  aktinAufbau.pptx  aktinAufbau2.pptx
cmake/: FindOpenCL.cmake
openCL/: CMakeLists.txt
recources/: CMakeLists.txt  an_11.off
shaders/: HMMHelix.frag  HMMHelix.geom  HMMHelix.vert  LMMHelix.frag  LMMHelix.vert  aRods.frag  aRods.vert  aSpheres.frag  aSpheres.vert  mRods.frag  mRods.vert  myosinHeads.frag  myosinHeads.vert  tropomyosinLines.frag  tropomyosinLines.geom  tropomyosinLines.vert  troponinSpheres.frag  troponinSpheres.vert  zDisc.frag  zDisc.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  RenderCone.cpp  RenderCone.h  RenderSphere.cpp  RenderSphere.h  Sarcomere.cpp  Sarcomere.h  definitions.h  fileLoader.cpp  fileLoader.h  main.cpp  object.cpp  object.h  renderer.h  shaderProgram.cpp  shaderProgram.h  trackballCamera.h
src/imGUI/: imgui_glfw.cpp
